# bitmask_launcher

./: CHANGELOG  CMakeLists.txt  README.md
changes/: bug-32_typo  bug_dont_raise_nosectionerror  bug_rename_logfile  bug_ssl_cert  bug_support_provided_logfile  feat-5876_delete_outdated  feature-3313_rebrand-client  feature_6044_diferenciate_linux32_64  feature_adapt-to-new-events-on-common
src/: CMakeLists.txt  launcher.conf  launcher.py  launcher.rc  main.cpp
