SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
SET(CMAKE_INSTALL_RPATH "lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

SET(launcher_SOURCES main.cpp)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

IF(WIN32)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows")
  SET(launcher_SOURCES ${launcher_SOURCES} launcher.rc)
ENDIF(WIN32)

ADD_EXECUTABLE(launcher ${launcher_SOURCES})
TARGET_LINK_LIBRARIES(launcher ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
